Corrigido erro de apresentação (fichas compradas por cliente avulso não eram apresentadas)